# auxml

./: .gitignore  conan_update_x64.bat  conan_update_x64.sh  conanfile.txt
auxml/: CMakeLists.txt
auxml/include/: darktorch_native.h
auxml/include/auxml/: api.h  data.h
auxml/include/auxml/api/: darknet_sealed_output_detections_funcs.h  detections_batch_funcs.h  object_handler_funcs.h  return_status_funcs.h  yolo_layer_detections_funcs.h  yolo_sealed_output_detections_funcs.h
auxml/include/auxml/auxiliary/: call.h
auxml/include/auxml/data/: anchor.h  list.h  net_params.h  object_detection.h  object_handler.h  object_type.h  output_tensor.h  return_status.h  yolo_layer_params.h  yolo_output.h
auxml/src/: darknet_sealed_output_detections.cpp  darknet_sealed_output_detections.hpp  detections_batch.hpp  yolo_layer_detections.cpp  yolo_layer_detections.hpp  yolo_layer_postprocessor.cpp  yolo_layer_postprocessor.hpp  yolo_sealed_output_detections.cpp  yolo_sealed_output_detections.hpp
auxml/src/api/: darknet_sealed_output_detections_funcs.cpp  detections_batch_funcs.cpp  object_handler_funcs.cpp  return_status_funcs.cpp  yolo_layer_detections_funcs.cpp  yolo_sealed_output_detections_funcs.cpp
auxml/src/auxiliary/: object_handler_check.hpp  try_catch_api.hpp
auxml/src/auxiliary/framework/: collection.hpp
auxml/src/auxiliary/math/: bbox2op.hpp
auxml/src/data/: darknet_box_provider.hpp
